--- a/src/app/components/batch-card/batch-card.component.html
+++ b/src/app/components/batch-card/batch-card.component.html
@@ -1,4 +1,4 @@
-<div class="batch-card-wrapper">
+<div class="batch-card-wrapper mt-4">
     <div class="row">
         <div class="col">
             <h6 class="text-primary">
@@ -8,24 +8,7 @@
     </div>
     <div class="card mt-1">
         <div class="card-body">
-            <table class="table table-borderless">
-                <thead class="border-bottom border-bottom-2">
-                    <tr>
-                        <th scope="col">Part name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @for (item of batchData.items; track item.partName) {
-                    <tr>
-                        <th>{{item.partName}}</th>
-                        <td>{{item.price}}</td>
-                        <td>{{item.time | date:'medium'}}</td>
-                    </tr>
-                    }
-                </tbody>
-            </table>
+            <app-data-table [dataSource]="batchData.items" [columns]="columns"></app-data-table>
         </div>
     </div>
 </div>
