--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,31 +9,11 @@
         </div>
         <div class="row mt-5 justify-content-center">
             <div class="col-6 d-flex gap-3 flex-column">
-                @for (item of batchList; track item.batchName) {
-                <app-batch-card [batchData]="item"></app-batch-card>
-                } @empty {
-                <p> There are no items, Create new Batch</p>
-                }
+                <app-batch-list></app-batch-list>
             </div>
         </div>
     </div>
     
 </div>
 
-<div id="exampleModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
-    <div class="modal-dialog modal-dialog-scrollable">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">{{nextBatchName}}</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-  <app-product-list [partList]="partList" (onAction)="onPartActionClick($event)" (onPriceChange)="updatePartPrice($event)"></app-product-list>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary"(click)="onSubmit()" data-bs-dismiss="modal">Save</button>
-          </div>
-        </div>
-      </div>
-</div>
+<app-batch-modal #modal></app-batch-modal>
